in_cont/a-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx1-deployment
  namespace: a-ingress
spec:
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k8s-worker02
      containers:
        - name: nginx
          image: 192.100.100.44:5000/foulolee/mywebapp:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: my-registry-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2-deployment
  namespace: a-ingress
spec:
  selector:
    matchLabels:
      app: nginx
      version: v2
  template:
    metadata:
      labels:
        app: nginx
        version: v2
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k8s-worker01
      containers:
        - name: nginx
          image: 192.100.100.44:5000/foulolee/mywebapp:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: my-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-combined-service
  namespace: a-ingress
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: a-ingress-nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "false"  # 기본 사용 여부 (원하면 true로 설정)
spec:
  controller: a-ingress-nginx/controller

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: a-nginx-ingress
  namespace: a-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: a-ingress-nginx
  rules:
    - host: test.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-combined-service
                port:
                  number: 80
